--- a/Shane Website V1/styles/index.css
+++ b/Shane Website V1/styles/index.css
@@ -41,7 +41,7 @@ html{
 	/*background: Red;*/
 
 	font-family: "Inter", sans-serif;
-	font-weight: 200;
+	font-weight: 300;
 	font-size: 4vw;
 	text-align: center;
 }
@@ -56,6 +56,7 @@ h1 {
 	color: White;
 	z-index: 1;
 	text-align: center;
+	text-shadow: 0px 0px 200px black;
   /*gradient effect: */
 	background-image: linear-gradient( blue 10%, white 53%, rgba(30,0,30,1) 54%, magenta 70%, white 90% );
 
@@ -76,6 +77,7 @@ h1 {
 a {
 	color: White;
 	text-decoration: none;
+	text-shadow: 0px 0px 100px black,0px 0px 100px black,0px 0px 100px black;
 	flex: 0 24vw;
 	z-index: 1;
 	margin: 0px;
