--- a/Shane Website V1/styles/index.css
+++ b/Shane Website V1/styles/index.css
@@ -10,10 +10,14 @@ html{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	overscroll-behavior: none;
+}
+body{
+	overflow: hidden; /* Hide scrollbars */
 }
 #backgroundCanvas {
 	z-index: -99;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -52,6 +56,8 @@ html{
 }
 
 h1 {
+	text-overflow: ellipsis;
+	white-space: nowrap;
 	z-index: 99;
 	/*font-family:"Work Sans", sans-serif;*/
 	font-family: "Astro Armada";
@@ -62,18 +68,14 @@ h1 {
 	z-index: 1;
 	text-align: center;
 	/*text-shadow: 0px 0px 100px white;*/
-  /*gradient effect: */
-	background-image: linear-gradient( blue 10%, white 53%, rgba(30,0,30,1) 54%, magenta 70%, white 90% );
+	background-image: linear-gradient( blue 10%, white 50%, rgba(30,0,30,1) 51%, magenta 70%, white 90% );
 
-  /* Set the background size and repeat properties. */
-  background-size: 100%;
-  background-repeat: repeat;
 
   /* Use the text as a mask for the background. */
   /* This will show the gradient as a text color rather than element bg. */
-  -webkit-background-clip: text;
+	-webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
+
   -moz-text-fill-color: transparent;
 	-webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: white;
@@ -82,7 +84,6 @@ h1 {
 a {
 	color: White;
 	text-decoration: none;
-	text-shadow: 0px 0px 100px black,0px 0px 100px black,0px 0px 100px black;
 	flex: 0 24vw;
 	z-index: 1;
 	margin: 0px;
@@ -94,13 +95,3 @@ u {
 }
 
 
-#bottomGradient {
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	padding: 0px;
-	width: 100%;
-	height: 34%;
-	z-index: -1;
-	/*background-image: linear-gradient(black, rgba(0,0,0,0));*/
-}
