Fixed performance features as well as issues in safari + added better bio

--- a/Shane Website V1/styles/index.css
+++ b/Shane Website V1/styles/index.css
@@ -104,9 +104,7 @@ body{
 	display: flex;
 	font-family: "VCR", sans-serif;
 }
-#bioHeader:hover {
-	filter: url(#filter);
-}
+
 #bioHeader:before, #bioHeader:after {
 	position: absolute;
 	top: 0;
@@ -132,8 +130,8 @@ body{
 	display: flex;
 	font-family: "Poppins", sans-serif;
 	font-weight: 200;
-	font-size: 2vw;
-	text-align: left;
+	font-size: max(2vw, 15px);
+	text-align: center;
 }
 #h2Container {
 
@@ -143,7 +141,7 @@ body{
 	flex-direction: row;
 	font-family: "Poppins", sans-serif;
 	font-weight: 200;
-	font-size: 4vw;
+	font-size: max(4vw,34px);
 	text-align: center;
 }
 
@@ -174,10 +172,9 @@ a {
 	justify-content: center;
 	text-align: center;
 	text-decoration: none;
-	flex: 0 24vw;
+
 	z-index: 1;
 	margin: 0px;
-
 	color: rgba(230,230,230,.9);
 	mix-blend-mode: lighten;
 	position: relative;
@@ -189,7 +186,8 @@ u:hover{
 	mix-blend-mode: hard-light;
 }
 u {
-	filter: url(#filterNoGlitch2) drop-shadow(0px 0px 9px rgba(255,255,255,.2));
+	padding-left: 6vw;
+	padding-right: 6vw;
 	z-index: 1;
 	text-decoration: none;
 	border-bottom: 0px solid white;
