--- a/Shane Website V1/Photos/styles/index.css
+++ b/Shane Website V1/Photos/styles/index.css
@@ -4,46 +4,114 @@ html{
 }
 * {
     color: white;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+
+}
+#topHeader{
+    position: absolute;
+    padding-top: 20px;
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    font-family: "Poppins", sans-serif;
+}
+#topHeader > .box{
+    width:100%;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    display: inline-flex;
+    border-bottom: 0px solid white;
+}
+#topHeader > .box > a {
+    align-items: center;
+    justify-content: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-bottom: 0px solid white;
 }
 
-/* force scrollbar */
-html { overflow-y: scroll; }
+#title{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+#titleContainer{
+    height: 50%;
+}
+#titleContainer > p {
+    /*background: blue;*/
+    margin-top: 19vw;
+    text-align: center;
 
-body { font-family: sans-serif; }
+    font-weight: 100;
+    font-family: "Poppins";
+    font-size: 10.3vw;
+    box-shadow: magenta;
+}
+#gallerySelector{
+    padding-top: 3vw;
+    height: 3vw;
+    /*background: red;*/
+    display: flex;
+}
+#gallerySelector> .box{
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    border-bottom: 0px solid white;
+}
+#gallerySelector > .box > a {
+    align-items: center;
+    justify-content: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-size: 5vw;
+    text-align: center;
+    text-decoration: none;
+    border-bottom: 0px solid white;
+}
+#backgroundImage{
+    z-index: -1;
+    position: absolute;
+    filter: brightness(0.6);
+}
+#aboveContent{
 
-/* ---- grid ---- */
-
-.grid {
+    background-image: url("tlbg.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
     background: none;
+    height: calc(0.654 * 100vw);
 }
-.gutter-sizer{
-    width: 1%;
-}
+body { font-family: sans-serif;     padding: 0;
+    margin: 0;
+    box-sizing: border-box;}
 
-/* clear fix */
-.grid:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-/* ---- .grid-item ---- */
-
-.grid-sizer,
-.grid-item {
-    width: max(300px, 20vw);
-    margin-bottom: 1%;
-}
-
-.grid-item {
-    float: left;
-}
-
-.grid-item img {
+img {
     display: block;
     max-width: 100%;
+    height: auto;
+}
+.photoBox{
+    min-height: 500px;
+    overflow-x: hidden;
+}
+.inner {
+    padding: 0px;
+}
+#storageGrid{
+    visibility: hidden;
 }
 
+/*.urban{*/
+/*    visibility: hidden;*/
+/*    height: 0px;*/
+/*}*/
